--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,8 +4,10 @@ buildscript {
         minSdkVersion = 23
         compileSdkVersion = 34
         targetSdkVersion = 34
-        ndkVersion = "26.1.10909125"
+        ndkVersion = "25.1.8937393"
         kotlinVersion = "1.9.22"
+        googlePlayServicesVersion = "21.0.1"
+
     }
     repositories {
         google()
@@ -15,6 +17,8 @@ buildscript {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
+        classpath("com.google.gms:google-services:4.4.2")
+        
     }
 }
 
