--- a/package.json
+++ b/package.json
@@ -10,8 +10,27 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.2.1",
+    "@react-native-firebase/app": "^20.1.0",
+    "@react-native-firebase/messaging": "^20.1.0",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "axios": "^1.7.2",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.74.1",
+    "react-native-camera": "^4.2.1",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-map-clustering": "^3.4.2",
+    "react-native-maps": "^1.15.6",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-maps-super-cluster": "^1.6.0",
+    "react-native-marquee": "^0.5.0",
+    "react-native-permissions": "^4.1.5",
+    "react-native-push-notification": "^8.1.1",
+    "react-native-qrcode-scanner": "^1.5.5",
+    "react-native-safe-area-context": "^4.10.4",
+    "react-native-screens": "^3.31.1",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
